Uppangala 0.1.9014 Article draft beginning

Uppangala 0.1.9013 FD, all null models, and result tables, and tree heights

Uppangala 0.1.9012 CWT.R, null_model.R, RLQ, SAC, PhyloS, CWV, SEM

Uppangala 0.1.9011 Doc reorganization

Uppangala 0.1.9010 PreliminaryResults Environmental filters + Interpretations

Uppangala 0.1.9009 PreliminaryResults.Rmd Abiotic -> Biotic factors

Uppangala 0.1.9008 README + Presentation final

Uppangala 0.1.9007 Presentation

Uppangala 0.1.9006 Francois CR first version

Uppangala 0.1.9005 regression_table & PreliminaryResults 1st version

Uppangala 0.1.9004 null_model function improve and regression_table

Uppangala 0.1.9003 Preliminary results vignette beginning

Uppangala 0.1.9002 null_models functions

Uppangala 0.1.9001 README

Uppangala 0.1.9000 First Github commit